--- a/FinancialAdvisorAppAPI/FinancialAdvisorAppAPI.csproj
+++ b/FinancialAdvisorAppAPI/FinancialAdvisorAppAPI.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Ref\" />
+  </ItemGroup>
+
 </Project>
