--- a/FinancialAdvisorAppAPI/FinancialAdvisorAppAPI.csproj
+++ b/FinancialAdvisorAppAPI/FinancialAdvisorAppAPI.csproj
@@ -6,6 +6,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>C:\Users\Steve\source\repos\FinancialAdvisorApp\FinancialAdvisorAppAPI\FinancialAdvisorAppAPI.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
